--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -3,6 +3,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 25px;
   background-color: #3eb489;
 
   .logo-container {
@@ -12,14 +13,15 @@
   }
 
   .options {
-    width: 20%;
+    width: 50%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-end;
 
-    .options {
-      padding: 5px 15px;
+    .option {
+      padding: 10px 15px;
+      cursor: pointer;
     }
   }
 }
