insert user into database

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 25px;
-  background-color: #3eb489;
+  background-color: lightslategray;
 
   .logo-container {
     height: 50px;
