updated shop data with new data, updated cart utils to group items in cart reducer

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -5,6 +5,7 @@
   justify-content: space-between;
   margin-bottom: 25px;
   background-color: lightslategray;
+  padding-block: 87;
 
   .logo-container {
     height: 50px;
