--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Open Sans Condensed";
-
+  padding: 20px 40px;
   margin: 0;
 }
 
@@ -11,4 +11,5 @@ a {
 
 * {
   box-sizing: border-box;
+  padding: 0;
 }
