--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -17,7 +17,7 @@
       text-transform: capitalize;
       width: 23%;
 
-      &last-child {
+      &:last-child {
         width: 8%;
       }
     }
